--- a/LimalWavre2020/src/app/modules/common/header/menu/menu.component.html
+++ b/LimalWavre2020/src/app/modules/common/header/menu/menu.component.html
@@ -66,7 +66,7 @@
           <li><a class="dropdown-item" routerLinkActive="active" routerLink="competition/liste">Stages</a></li></div>
       </li>
 
-      <li><a class="nav-link" routerLinkActive="active" routerLink="prix/test"><i class="fa fa-eur" aria-hidden="true"></i> Prix<span class="sr-only">(current)</span></a></li>
+      <li><a class="nav-link" routerLinkActive="active" routerLink="prix/test"><i class="fa fa-eur" aria-hidden="true"></i> Devenir Membre<span class="sr-only">(current)</span></a></li>
 
       <li><a class="nav-link" routerLinkActive="active" routerLink="/"><i class="fa fa-file-text" aria-hidden="true"></i> Documents<span class="sr-only">(current)</span></a></li>
                     
