--- a/LimalWavre2020/src/app/modules/local/local/local.component.html
+++ b/LimalWavre2020/src/app/modules/local/local/local.component.html
@@ -11,7 +11,7 @@
   <div class="row">
 
     <!--Grid column-->
-    <div class="col-lg-5 my-4">
+    <div class="col-lg-4 my-4">
 
       <!--Form with header-->
       <mdb-card>
@@ -22,14 +22,15 @@
             <h3>
               Notre adresse</h3>
           </div>
-          <h3 class="text-center"> WAVRE </h3>
-          <img src="./assets/img/WAVRE.png" alt="Avatar" class="image" style="width:100%">
+          <img src="./assets/img/WAVRE.png" alt="Avatar" class="center">
           <br>
           <h3 class="text-center"> Rue Charles Jaumotte 156 <br> 1300 WAVRE (Limal)</h3>
+          <div class="text-center">
+            <button mdbBtn type="button" color="info" rounded="true" outline="true" mdbWavesEffect><a href="https://www.google.be/maps/place/CTT+Limal-Wavre/@50.7006737,4.5791177,17z/data=!3m1!4b1!4m5!3m4!1s0x47c3d626fa830a35:0xe3776dc79b64754!8m2!3d50.7006737!4d4.5813064?hl=fr" target="_blank" aria-pressed="true">Lien Google</a></button>
 
-
+          </div>
           
-
+          
         </mdb-card-body>
 
       </mdb-card>
@@ -39,8 +40,41 @@
     <!--Grid column-->
 
     <!--Grid column-->
-    <div class="col-lg-7">
-      <img src="./assets/img/salle.png" alt="Avatar" class="image" style="width:100%">
+    <div class="col-lg-4 my-4">
+      <mdb-card>
+
+        <mdb-card-body>
+          <!--Header-->
+          <div class="form-header red accent-1">
+            <h3>
+              Plan d'accès</h3>
+          </div>
+          <img src="./assets/img/plan.png" alt="Avatar" class="image" style="width:100%"> <br><br>
+          
+
+        </mdb-card-body>
+
+      </mdb-card>
+      
+    </div>
+    <!--Grid column-->
+    <!--Grid column-->
+    <div class="col-lg-4 my-4">
+      <mdb-card>
+
+        <mdb-card-body>
+          <!--Header-->
+          <div class="form-header red accent-1">
+            <h3>
+              Notre salle</h3>
+          </div>
+          <img src="./assets/img/salle.png" alt="Avatar" class="image" style="width:100%"> <br><br>
+          
+
+        </mdb-card-body>
+
+      </mdb-card>
+      
     </div>
     <!--Grid column-->
 
