--- a/wawa/src/app/modules/interclubs/feuille-de-match/feuille-de-match.component.html
+++ b/wawa/src/app/modules/interclubs/feuille-de-match/feuille-de-match.component.html
@@ -2,7 +2,7 @@
 
 
 <div class="card">
-  
+    <h5 class="card-header info-color white-text">Remplir une feuille d'interclubs</h5>
     <div class="card-body">
         <p>Voici une petite vidéo qui explique comment remplir une feuille interclubs.</p>
  
