--- a/wawa/src/app/modules/interclubs/liste-de-force/liste-de-force.component.html
+++ b/wawa/src/app/modules/interclubs/liste-de-force/liste-de-force.component.html
@@ -4,7 +4,10 @@
 
 <div *ngIf="verifyErrors && verifyErrors.length>0">
     <table>
-
+        <tr *ngFor="let err of verifyErrors">
+            <td>{{ err.nom }}</td>
+            <td>{{ err.prenom }}</td>
+            <td>{{ err.licence }}</td>
         </tr>
     </table>
 </div>
